--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^4.0.1",
     "normalize.css": "^7.0.0",
-    "picturefill": "3.0.2",
+    "picturefill": "^3.0.2",
     "waypoints": "^4.0.1"
   },
   "devDependencies": {
